Fixed horizontal scroll issue.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -813,7 +813,7 @@ pre code {
 }
 
 .row {
-  margin-right: -15px;
+  margin-right: 0;
   margin-left: -15px;
 }
 
